--- a/FRONTEND/addstudents.html
+++ b/FRONTEND/addstudents.html
@@ -18,7 +18,7 @@
         <label for="Studentname">Student Name</label>
         <input type="text" id="Studentname" name="Studentname" placeholder="Enter the student name" required>
  
-        <label for=Fathername">Father Name</label>
+        <label for=Fathername>Father Name</label>
         <input type="text" id="Fathername" name="Fathername" placeholder="Enter the Father name" required>
  
         <label for="Contactnumber">Contact Number</label>
