--- a/FRONTEND/addclass.html
+++ b/FRONTEND/addclass.html
@@ -1,12 +1,16 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="addclass.css" rel="stylesheet">
 </head>
 <body>
-    <h1>New CLass</h1>
+    
 
     <form action="../BACKEND/addclass.php" method="post">
        
