--- a/FRONTEND/addstudents.html
+++ b/FRONTEND/addstudents.html
@@ -8,7 +8,7 @@
     <link href="addstudents.css" rel="stylesheet">
 </head>
 <body>
-    <h1>New Student Details</h1>
+    <!-- <h1>New Student Details</h1> -->
     <form method="post" action="../BACKEND/addstudent.php">
 
         <label for="DAS">DAS</label>
